--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,31 @@ body {
   position: relative;
 }
 
+.header {
+  height: 60px;
+  position: fixed;
+  background-color: rgba(1, 1, 1, 0);
+  z-index: 1;
+}
+
+.header .contenedor {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+}
+
+.logo .logo-logotipo {
+  font-size: 25px;
+  font-weight: 700;
+  font-style: italic;
+}
+
 .hero {
   height: 500px;
   background-color: red;
