--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-size: 16px;
   font-family: "Asap", sans-serif;
+  color: #fff;
 }
 
 .contenedor-fluido {
@@ -42,15 +43,48 @@ body {
 }
 
 .hero {
-  height: 500px;
-  background-color: red;
+  height: 100vh;
+  background: url(../img/bg.png) #00a3e4;
+  background-size: cover;
+  display: flex;
+  align-items: center;
 }
 
-.prueba {
-  height: 200px;
-  width: 200px;
-  background-color: green;
-  display: block;
+.hero .hero-footer {
+  height: 20%;
   position: absolute;
-  right: 5%;
+  width: 100%;
+  background-color: #49b9e6c2;
+  bottom: 0;
+}
+
+.btn {
+  background-color: #49b9e6;
+  width: 200px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-decoration: none;
+  line-height: 1.39;
+  font-size: 18px;
+  border-radius: 5px;
+}
+
+.info {
+}
+
+.info .title {
+  font-size: 55px;
+  font-weight: bold;
+  letter-spacing: 2.8px;
+  margin: 0 0 30px;
+}
+
+.info .desc {
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.9px;
+  margin: 0 0 37px;
 }
