--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,6 +56,17 @@ body {
   width: 100%;
   background-color: rgba(73, 185, 230, 0.76);
   bottom: 0;
+  display: flex;
+  align-items: center;
+}
+
+.hero .hero-footer .contenedor {
+  align-items: center;
+  display: flex;
+}
+
+.hero .hero-footer .twitter-share-button {
+  margin-left: 25px;
 }
 
 .btn {
